rust/pattern_c.rs

    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_t>())).functionPtrNextClosestSignature
                as *const _ as usize
        },
        222usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_t),
            "::",
            stringify!(functionPtrNextClosestSignature)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_t>())).tempProfiles as *const _ as usize
        },
        230usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_t),
            "::",
            stringify!(tempProfiles)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_t>())).importantHeadersCount as *const _
                as usize
        },
        238usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_t),
            "::",
            stringify!(importantHeadersCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_t>())).importantHeaders as *const _
                as usize
        },
        242usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_t),
            "::",
            stringify!(importantHeaders)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_t>())).associatedPool as *const _
                as usize
        },
        250usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_t),
            "::",
            stringify!(associatedPool)
        )
    );
}
pub type fiftyoneDegreesWorkset = fiftyoneDegrees_workset_t;
pub type fiftyoneDegreesProvider = fiftyoneDegrees_provider_t;
#[repr(C, packed(4))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_workset_pool_t {
    pub dataSet: *const fiftyoneDegreesDataSet,
    pub cache: *mut fiftyoneDegreesResultsetCache,
    pub provider: *const fiftyoneDegreesProvider,
    pub size: i32,
    pub available: i32,
    pub worksets: *mut *mut fiftyoneDegreesWorkset,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_workset_pool_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_workset_pool_t>(),
        40usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_workset_pool_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_workset_pool_t>(),
        4usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_workset_pool_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).dataSet as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(dataSet)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).cache as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(cache)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).provider as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(provider)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).size as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).available as *const _
                as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(available)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_workset_pool_t>())).worksets as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_workset_pool_t),
            "::",
            stringify!(worksets)
        )
    );
}
#[repr(C, packed(4))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_provider_t {
    pub activePool: *mut fiftyoneDegreesWorksetPool,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_provider_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_provider_t>(),
        8usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_provider_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_provider_t>(),
        4usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_provider_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_provider_t>())).activePool as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_provider_t),
            "::",
            stringify!(activePool)
        )
    );
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Initialises the provider passed to the method with a data set initialised"]
    #[doc = " from the file provided. If required properties is provided the associated"]
    #[doc = " data set will only return properties contained in the array."]
    #[doc = " @param fileName of the data source to use for initialisation"]
    #[doc = " @param provider pointer to the work set pool to be initialised"]
    #[doc = " @param properties array of strings containing the property names"]
    #[doc = " @param count the number of elements in the requiredProperties array"]
    #[doc = " @param poolSize number of work sets to hold in the pool"]
    #[doc = " @param cacheSize maximum number of items that the User-Agent cache should store"]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of creating"]
    #[doc = "\t\t   the new dataset, pool and cache. If status is anything other than"]
    #[doc = "\t\t   DATA_SET_INIT_STATUS_SUCCESS, then the initialization has failed."]
    pub fn fiftyoneDegreesInitProviderWithPropertyArray(
        fileName: *const ::std::os::raw::c_char,
        provider: *mut fiftyoneDegreesProvider,
        properties: *mut *const ::std::os::raw::c_char,
        count: i32,
        poolSize: ::std::os::raw::c_int,
        cacheSize: ::std::os::raw::c_int,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Initialises the provider passed to the method with a data set initialised"]
    #[doc = " from the file provided. If required properties is provided the associated"]
    #[doc = " data set will only return properties contained between separators."]
    #[doc = " @param fileName of the data source to use for initialisation"]
    #[doc = " @param provider pointer to the work set pool to be initialised"]
    #[doc = " @param properties char array to the separated list of properties"]
    #[doc = "        the dataSet can return"]
    #[doc = " @param poolSize number of work sets to hold in the pool"]
    #[doc = " @param cacheSize maximum number of items that the User-Agent cache should store"]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of creating"]
    #[doc = "\t\t   the new dataset, pool and cache. If status is anything other than"]
    #[doc = "\t\t   DATA_SET_INIT_STATUS_SUCCESS, then the initialization has failed."]
    pub fn fiftyoneDegreesInitProviderWithPropertyString(
        fileName: *const ::std::os::raw::c_char,
        provider: *mut fiftyoneDegreesProvider,
        properties: *const ::std::os::raw::c_char,
        poolSize: ::std::os::raw::c_int,
        cacheSize: ::std::os::raw::c_int,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Creates a new dataset, work set pool and User-Agent cache using the same"]
    #[doc = " configuration options as the current data set, pool and cache associated"]
    #[doc = " with the provider. The original file location is used to create the new data"]
    #[doc = " set."]
    #[doc = " The exisitng data set, pool and cache are marked to be freed if worksets are"]
    #[doc = " being used by other threads, or if no work sets are in use they are freed"]
    #[doc = " immediately."]
    #[doc = " @param provider pointer to the provider whose data set should be reloaded"]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of the reload"]
    #[doc = " \t   operation."]
    pub fn fiftyoneDegreesProviderReloadFromFile(
        provider: *mut fiftyoneDegreesProvider,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Creates a new dataset, work set pool and User-Agent cache using the same"]
    #[doc = " configuration options as the current data set, pool and cache associated"]
    #[doc = " with the provider. The memory located at the source pointer is used to"]
    #[doc = " create the new data set."]
    #[doc = " The exisitng data set, pool and cache are marked to be freed if worksets are"]
    #[doc = " being used by other threads, or if no work sets are in use they are freed"]
    #[doc = " immediately."]
    #[doc = " Important: The memory pointed to by source will NOT be freed by 51Degrees"]
    #[doc = " when the associated data set is freed. The caller is responsible for"]
    #[doc = " releasing the memory. If 51Degrees should release the memory then the"]
    #[doc = " caller should set the memoryToFree field of the data set associated with"]
    #[doc = " the returned pool to source. 51Degrees will then free this memory when the"]
    #[doc = " pool, data set and cache are freed after the last work set is returned to"]
    #[doc = " the pool."]
    #[doc = " @param provider pointer to the provider whose data set should be reloaded"]
    #[doc = " @param provider pointer to the provider whose data set should be reloaded."]
    #[doc = " @param length number of bytes that the file occupies in memory."]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of the reload"]
    #[doc = " \t   operation."]
    pub fn fiftyoneDegreesProviderReloadFromMemory(
        provider: *mut fiftyoneDegreesProvider,
        source: *mut ::std::os::raw::c_void,
        length: ::std::os::raw::c_long,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Releases all the resources used by the provider. The provider can not be"]
    #[doc = " used without being reinitialised after calling this method."]
    #[doc = " @param provider pointer to the provider to be freed"]
    pub fn fiftyoneDegreesProviderFree(provider: *mut fiftyoneDegreesProvider);
}
